<resources>
    <string name="app_name">Givni Delivery Users</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="name">NAME</string>
    <string name="email">Email</string>
    <string name="phone_number">Contact</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="givni">Givni</string>
    <string name="welcome">Welcome To,</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="register_with_us"> Register With Us.</string>
    <string name="no_account">No Account?</string>
    <string name="register">Register</string>
    <string name="enterName">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_onboard">Get Onboard!</string>
    <string name="collection_users">Users</string>
    <string name="equalTO">=====================</string>
</resources>